# ransac_multimodel

./: .gitignore  AGENT_CONTEXT.md  README.md  __init__.py  correspondence.py  correspondence_torch.py  divergence_guard.py  dlt_ransac.py  gaussian_extraction.py  geometry_utils.py  homography.py  homography_theseus.py  homography_torch.py  homography_torch_lm.py  parameters.py  parity_utils.py  pipeline.py  plotting.py  pyproject.toml  ransac_init.py  requirements.txt  residuals.py  solve.py  transforms.py
experiments/: sat_roma_ablation.py
ransac_multimodel/: correspondence.py  gaussian_fit.py  homography.py  parity_utils.py
